<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="carOwner"
            type="com.idris.aminu.android.models.CarOwner" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:contentPadding="@dimen/space_16"
        app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3.5">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="120dp"
            android:layout_gravity="center_vertical"
            app:cardCornerRadius="@dimen/space_16"
            android:layout_margin="@dimen/dimen_4dp"
            app:cardElevation="2dp">

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:image="@{carOwner}"
           android:contentDescription="@string/car_image"
           tools:src="@drawable/sample" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Brad Gibson"
                app:name="@{carOwner}"
                android:textColor="@color/black"
                android:textSize="18sp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brand"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="BMW"
                        app:make="@{carOwner}"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <View
                    android:id="@+id/view1"
                    android:layout_width="1dp"
                    android:layout_height="32dp"
                    android:background="@color/black"
                    android:layout_marginEnd="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/brand"/>

                <LinearLayout
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/view1"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1996"
                        app:year="@{carOwner}"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="1dp"
                    android:layout_height="32dp"
                    android:background="@color/black"
                    android:layout_marginEnd="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/year"/>

                <LinearLayout
                    android:id="@+id/color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/view2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color"/>

                    <View
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        tools:background="@drawable/color_bg"
                        android:layout_gravity="center"
                        app:color="@{carOwner}"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp">


                <LinearLayout
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="America"
                        app:country="@{carOwner}"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/country"
                    android:layout_marginEnd="@dimen/space_16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Female"
                        app:gender="@{carOwner}"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/job"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/gender"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/job"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Software"
                        android:maxLines="1"
                        android:ellipsize="end"
                        app:job="@{carOwner}"
                        android:textColor="@color/black"/>

                </LinearLayout>



            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginEnd="@dimen/dimen_4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="idrisaminu861@gmail.com"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:email="@{carOwner}"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:layout_marginEnd="@dimen/dimen_4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="gdqdbhhixhajxuhxuixhbqjxkcxjqxqkjhx hcgqwbbh hw hwbdhgb whq"
                android:maxLines="1"
                android:ellipsize="end"
                app:bio="@{carOwner}"
                android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>